<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_png"
    tools:context=".presentation.nutrition.NutritionFragment">


    <TextView
        android:id="@+id/grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/poppins"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins"
        android:text="@string/grams"
        android:textColor="#BFFFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/gramsET"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/gramsET"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/gramsET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="@null"
        android:digits="0123456789"
        android:ems="2"
        android:fontFamily="@font/poppins"
        android:hint="@string/_0"
        android:inputType="phone"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="#C51162"
        android:textColorHint="#C51162"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/product_"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:startIconDrawable="@drawable/ic_food"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:digits="@string/digits"
            android:fontFamily="@font/poppins"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/layout_bg"
        android:ems="19"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nutritionRecycler"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="2dp"
        tools:listitem="@layout/nutrition_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>